[project]
name = "modelscope-api"
description = "This is a universal custom node for ComfyUI that supports both Text-to-Image and Image-to-Image generation by calling various models via the official ModelScope API."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Qwen-Image ComfyUI Plugin Requirements", "# Core dependencies (usually already available in ComfyUI)", "requests>=2.25.0", "pillow>=8.0.0", "torch>=1.9.0", "numpy>=1.20.0", "# Additional dependencies for vision functionality", "openai>=1.0.0", "# Network and proxy support", "httpx[socks]>=0.24.0", "socksio>=1.0.0", "# Optional dependencies for enhanced functionality", "# pydantic-settings  # For advanced configuration management"]

[project.urls]
Repository = "https://github.com/hujuying/ComfyUI-ModelScope-API"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/hujuying/ComfyUI-ModelScope-API/wiki"
"Bug Tracker" = "https://github.com/hujuying/ComfyUI-ModelScope-API/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ModelScope-API"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

